Regedit and Header File
Creation of header file as stated in the document;
Creation of reading and writting regedit function of limiters;
Creation of defines;
Code Organization and labeling.

--- a/Control/Control/Control.vcxproj
+++ b/Control/Control/Control.vcxproj
@@ -123,10 +123,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ControlUse.c" />
     <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GeneralUse.h" />
+    <ClInclude Include="ControlUse.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
