--- a/Control/Control/Control.vcxproj.filters
+++ b/Control/Control/Control.vcxproj.filters
@@ -18,9 +18,12 @@
     <ClCompile Include="Main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ControlUse.c">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GeneralUse.h">
+    <ClInclude Include="ControlUse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
