--- a/Control/Aviao/Aviao.vcxproj.filters
+++ b/Control/Aviao/Aviao.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="AviaoUse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SO2_TP_DLL_2021.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
